; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if.c_if_delete_netagent.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if.c_if_delete_netagent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @if_delete_netagent(%struct.ifnet* %0, i32 %1) #0 {
  %3 = alloca %struct.ifnet*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.ifnet* %0, %struct.ifnet** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.ifnet*, %struct.ifnet** %3, align 8
  %7 = icmp ne %struct.ifnet* %6, null
  %8 = zext i1 %7 to i32
  %9 = call i32 @VERIFY(i32 %8)
  %10 = load %struct.ifnet*, %struct.ifnet** %3, align 8
  %11 = call i32 @ifnet_lock_exclusive(%struct.ifnet* %10)
  %12 = load %struct.ifnet*, %struct.ifnet** %3, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @if_delete_netagent_locked(%struct.ifnet* %12, i32 %13)
  store i32 %14, i32* %5, align 4
  %15 = load %struct.ifnet*, %struct.ifnet** %3, align 8
  %16 = call i32 @ifnet_lock_done(%struct.ifnet* %15)
  %17 = load i32, i32* %5, align 4
  ret i32 %17
}

declare dso_local i32 @VERIFY(i32) #1

declare dso_local i32 @ifnet_lock_exclusive(%struct.ifnet*) #1

declare dso_local i32 @if_delete_netagent_locked(%struct.ifnet*, i32) #1

declare dso_local i32 @ifnet_lock_done(%struct.ifnet*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
